[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/Options/OptionsVideo.gd" type="Script" id=1]

[node name="OptionsVideo" type="VBoxContainer"]
margin_right = 394.0
margin_bottom = 521.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 394.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
text = "title_video"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 34.0
margin_right = 394.0
margin_bottom = 38.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 42.0
margin_right = 394.0
margin_bottom = 72.0

[node name="Label" type="Label" parent="HBoxContainer"]
margin_right = 102.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
text = "label_resolution"
align = 2
valign = 1

[node name="ResolutionList" type="OptionButton" parent="HBoxContainer"]
margin_left = 106.0
margin_right = 394.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_top = 76.0
margin_right = 394.0
margin_bottom = 106.0

[node name="Label" type="Label" parent="HBoxContainer2"]
margin_right = 100.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
align = 2
valign = 1

[node name="Fullscreen" type="CheckBox" parent="HBoxContainer2"]
margin_left = 104.0
margin_right = 232.0
margin_bottom = 30.0
text = "label_fullscreen"

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
margin_top = 110.0
margin_right = 394.0
margin_bottom = 140.0

[node name="Label" type="Label" parent="HBoxContainer3"]
margin_right = 100.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
align = 2
valign = 1

[node name="Vsync" type="CheckBox" parent="HBoxContainer3"]
margin_left = 104.0
margin_right = 205.0
margin_bottom = 30.0
text = "label_vsync"

[node name="HBoxContainer4" type="HBoxContainer" parent="."]
margin_top = 144.0
margin_right = 394.0
margin_bottom = 174.0

[node name="Label" type="Label" parent="HBoxContainer4"]
margin_right = 100.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
align = 2
valign = 1

[node name="Antialiasing" type="CheckBox" parent="HBoxContainer4"]
margin_left = 104.0
margin_right = 241.0
margin_bottom = 30.0
text = "label_antialiasing"
[connection signal="item_selected" from="HBoxContainer/ResolutionList" to="." method="_on_ResolutionList_item_selected"]
[connection signal="toggled" from="HBoxContainer2/Fullscreen" to="." method="_on_Fullscreen_toggled"]
[connection signal="toggled" from="HBoxContainer3/Vsync" to="." method="_on_Vsync_toggled"]
[connection signal="toggled" from="HBoxContainer4/Antialiasing" to="." method="_on_Antialiasing_toggled"]
